--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgba($color: #252525, $alpha: 0.5);
+    z-index: 5000;
 
     .dialog {
         position: absolute;
@@ -40,6 +41,7 @@
                     margin-left: 8px;
                     width: 24px;
                     height: 24px;
+                    line-height: 24px;
                     text-align: center;
                     border-radius: 50%;
                     cursor: pointer;
@@ -54,6 +56,7 @@
         .dialog-body {
             padding: 18px;
             min-height: 40px;
+            max-height: calc(100vh - 100px);
             overflow: auto;
         }
 
@@ -61,7 +64,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            padding: 8px 18px;
+            padding: 12px 18px;
 
             .actions-container {
                 text-align: right;
