--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba($color: #252525, $alpha: 0.5);
+    background-color: rgba($color: #000000, $alpha: 0.5);
     z-index: 5000;
 
     .dialog {
@@ -12,11 +12,11 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        margin-top: -5%;
         min-width: 300px;
         background-color: #ffffff;
         border-radius: 4px;
         overflow: hidden;
-        box-shadow: 0 0 3px 2px rgba($color: #ffffff, $alpha: 0.4);
 
         .dialog-header {
             display: flex;
