--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,4 +1,4 @@
-.dialog-overlay {
+.bn-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -7,7 +7,7 @@
     background-color: rgba($color: #000000, $alpha: 0.5);
     z-index: 5000;
 
-    .dialog {
+    .bn-modal {
         position: absolute;
         left: 50%;
         top: 50%;
@@ -18,7 +18,7 @@
         border-radius: 4px;
         overflow: hidden;
 
-        .dialog-header {
+        .bn-modal-header {
             display: flex;
             align-items: center;
             padding: 12px 18px;
@@ -53,14 +53,14 @@
             }
         }
 
-        .dialog-body {
+        .bn-modal-body {
             padding: 18px;
             min-height: 40px;
             max-height: calc(100vh - 100px);
             overflow: auto;
         }
 
-        .dialog-footer {
+        .bn-modal-footer {
             display: flex;
             align-items: center;
             justify-content: flex-end;
@@ -82,7 +82,7 @@
     }
 }
 
-.notifier-container {
+.bn-notification-container {
     position: fixed;
 
     &.center {
@@ -93,14 +93,14 @@
         &.top {
             top: 0;
 
-            .notifier-item:first-child {
+            .notification-item:first-child {
                 border-radius: 0 0 4px 4px;
             }
         }
 
         &.bottom {
             bottom: 0;
-            .notifier-item {
+            .notification-item {
                 border-radius: 4px 4px 0 0;
             }
         }
@@ -108,9 +108,9 @@
     &.top {
         top: 15px;
 
-        .notifier-item {
+        .notification-item {
             margin-bottom: 15px;
-            &.notifier-item-hidden {
+            &.notification-item-hidden {
                 margin-bottom: 0;
             }
         }
@@ -118,47 +118,47 @@
     &.bottom {
         bottom: 15px;
 
-        .notifier-item {
+        .notification-item {
             margin-top: 15px;
-            &.notifier-item-hidden {
+            &.notification-item-hidden {
                 margin-top: 0;
             }
         }
     }
     &.left {
         left: 0;
-        .notifier-item {
+        .notification-item {
             transform: translateX(-100%);
-            &.notifier-item-show {
+            &.notification-item-show {
                 transform: translateX(0);
                 margin-left: 15px;
             }
-            &.notifier-item-hidden {
+            &.notification-item-hidden {
                 transform: translateX(-100%);
             }
         }
     }
     &.right {
         right: 0;
-        .notifier-item {
+        .notification-item {
             transform: translateX(100%);
-            &.notifier-item-show {
+            &.notification-item-show {
                 transform: translateX(0);
                 margin-right: 15px;
             }
-            &.notifier-item-hidden {
+            &.notification-item-hidden {
                 transform: translateX(100%);
             }
         }
     }
 
     &.square {
-        .notifier-item {
+        .notification-item {
             border-radius: 0;
         }
     }
 
-    .notifier-item {
+    .notification-item {
         position: relative;
         padding: 15px;
         color: #ffffff;
@@ -166,19 +166,19 @@
         transition: all 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
 
         &.default {
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(0, 0, 0, 0.8);
         }
         &.error {
-            background-color: rgba(254, 26, 0, 0.9);
+            background-color: rgba(254, 26, 0, 0.8);
         }
         &.success {
-            background-color: rgba(76, 175, 80, 0.9);
+            background-color: rgba(76, 175, 80, 0.8);
         }
         &.warning {
-            background-color: rgba(254, 189, 0, 0.9);
+            background-color: rgba(254, 189, 0, 0.8);
         }
 
-        &.notifier-item-hidden {
+        &.notification-item-hidden {
             height: 0;
             padding-top: 0;
             padding-bottom: 0;
