--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,3 +1,15 @@
+@keyframes slideDown {
+    from {
+        transform: translate(-50%, -100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+}
+
 .bn-modal-overlay {
     position: fixed;
     top: 0;
@@ -17,6 +29,12 @@
         background-color: #ffffff;
         border-radius: 4px;
         overflow: hidden;
+
+        &.animated {
+            animation-name: slideDown;
+            animation-duration: 500ms;
+            animation-fill-mode: both;
+        }
 
         .bn-modal-header {
             display: flex;
@@ -163,7 +181,7 @@
         padding: 15px;
         color: #ffffff;
         border-radius: 4px;
-        transition: all 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+        transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
         &.default {
             background-color: rgba(0, 0, 0, 0.8);
