--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -181,7 +181,7 @@
         padding: 15px;
         color: #ffffff;
         border-radius: 4px;
-        transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        transition: all 1500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
         &.default {
             background-color: rgba(0, 0, 0, 0.8);
@@ -201,6 +201,7 @@
             padding-top: 0;
             padding-bottom: 0;
             overflow: hidden;
+            opacity: 0;
         }
     }
 }
