--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -10,6 +10,17 @@
     }
 }
 
+@keyframes rotate {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
 .bn-modal-overlay {
     position: fixed;
     top: 0;
@@ -196,6 +207,9 @@
             background-color: rgba(254, 189, 0, 0.8);
         }
 
+        &.notification-item-show {
+            transition-duration: 300ms;
+        }
         &.notification-item-hidden {
             height: 0;
             padding-top: 0;
@@ -204,4 +218,64 @@
             opacity: 0;
         }
     }
+}
+
+$loading-color: #333;
+
+.bn-loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: grid;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 5100;
+
+    .bn-loading-container {
+        margin: auto;
+        text-align: center;
+
+        .bicon {
+            position: relative;
+            top: 0.1em;
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            box-sizing: border-box;
+            text-align: left;
+            line-height: 0;
+
+            &.bicon-loading {
+                width: 0.9em;
+                height: 0.9em;
+                border-radius: 50%;
+                border-top: 2px solid rgba(0, 0, 0, 0.1);
+                border-right: 2px solid rgba(0, 0, 0, 0.1);
+                border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+                border-left: 2px solid $loading-color;
+                animation: rotate 1s infinite linear;
+            }
+        }
+
+        .loading-text {
+            color: $loading-color;
+        }
+
+        &.has-text {
+            .bicon.bicon-loading {
+                background-color: #ffffff;
+            }
+        }
+    }
+}
+body > .bn-loading-overlay .bn-loading-container .bicon.bicon-loading {
+    width: 4rem;
+    height: 4rem;
+    border-width: 4px;
+}
+body > .bn-loading-overlay .bn-loading-container .loading-text {
+    position: relative;
+    margin-top:  -2.5rem;
+    font-size: 0.8rem;
 }
