--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -220,17 +220,66 @@
     }
 }
 
+/* Loading component */
 $loading-color: #333;
+@keyframes loading-element {
+    0% {
+        transform: scaleY(1);
+    }
+    50% {
+        transform: scaleY(1.5);
+    }
+    100% {
+        transform: scaleY(1);
+    }
+}
+.loading-element {
+    display: inline-block;
+    position: relative;
+    margin-bottom: 5px;
+    div {
+        display: inline-block;
+        margin: 0 2px;
+        width: 0.4em;
+        height: 0.8em;
+        background: $loading-color;
+        animation: loading-element 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+        border-radius: 2px;
+        &:nth-child(1) {
+            animation-delay: -0.24s;
+        }
+        &:nth-child(2) {
+            animation-delay: -0.12s;
+        }
+        &:nth-child(3) {
+            animation-delay: 0;
+        }
+    }
+}
 
 .bn-loading-overlay {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.5);
     z-index: 5100;
+
+    &.inline {
+        background-color: transparent;
+        padding: 0.5em;
+
+        .bn-loading-container {
+            margin: inherit;
+            text-align: left;
+            .loading-text {
+                display: inline-block;
+                margin-left: 0.25em;
+            }
+        }
+    }
 
     .bn-loading-container {
         margin: auto;
@@ -269,13 +318,18 @@ $loading-color: #333;
         }
     }
 }
-body > .bn-loading-overlay .bn-loading-container .bicon.bicon-loading {
-    width: 4rem;
-    height: 4rem;
-    border-width: 4px;
+body > .bn-loading-overlay {
+    position: fixed;
+    height: 100vh;
+    .bn-loading-container .bicon.bicon-loading {
+        width: 4em;
+        height: 4em;
+        border-width: 4px;
+    }
+    .bn-loading-container .loading-text {
+        position: relative;
+        margin-top: -3.2em;
+        font-size: 0.8em;
+    }
 }
-body > .bn-loading-overlay .bn-loading-container .loading-text {
-    position: relative;
-    margin-top:  -2.5rem;
-    font-size: 0.8rem;
-}
+
