--- a/site/style.css
+++ b/site/style.css
@@ -27,3 +27,14 @@ main section {
     top: 0;
     z-index: 9999;
 }
+.btn {
+    margin-bottom: 1rem;
+}
+.box {
+    position: relative;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+.box.with-border {
+    border: solid 1px #ddd;
+}
