style(modal): remove margin bottom of button

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -97,6 +97,9 @@
 
             .actions-container {
                 text-align: right;
+                .btn {
+                    margin-bottom: 0;
+                }
                 button {
                     margin-left: 8px;
                     cursor: pointer;
