--- a/site/style.css
+++ b/site/style.css
@@ -21,18 +21,19 @@ main section {
     padding-top: 15px;
     margin-bottom: 20px;
 }
+hr {
+    margin: 15px 0;
+}
 .forkme {
     position: fixed;
     right: 0;
     top: 0;
     z-index: 9999;
 }
-.btn {
-    margin-bottom: 1rem;
-}
 .box {
     position: relative;
     padding: 0.5rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 .box.with-border {
