--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -35,11 +35,20 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        margin-top: -5%;
         min-width: 300px;
         background-color: #ffffff;
         border-radius: 4px;
         overflow: hidden;
+
+        &.theme-alert,
+        &.theme-confirm {
+            margin-top: -5%;
+        }
+
+        &.theme-iframe {
+            width: 80%;
+            height: calc(100vh - 100px);
+        }
 
         &.animated {
             animation-name: slideDown;
@@ -87,6 +96,13 @@
             min-height: 40px;
             max-height: calc(100vh - 100px);
             overflow: auto;
+        }
+
+        iframe.bn-modal-body {
+            border: none;
+            width: 100%;
+            height: 100%;
+            padding: 0;
         }
 
         .bn-modal-footer {
