--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -115,7 +115,56 @@
                 text-align: right;
                 .btn {
                     margin-bottom: 0;
+                    display: inline-block;
+                    font-weight: 400;
+                    text-align: center;
+                    vertical-align: middle;
+                    user-select: none;
+                    background-color: transparent;
+                    border: 1px solid transparent;
+                    padding: 0.375em 0.75em;
+                    font-size: 1em;
+                    line-height: 1.5;
+                    border-radius: 0.25em;
+                    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+                        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+                    &:focus {
+                        outline: none;
+                    }
                 }
+                .btn-default {
+                    color: #212529;
+                    background-color: #f8f9fa;
+                    border-color: #f8f9fa;
+
+                    &:not(:disabled):active {
+                        color: #212529;
+                        background-color: #dae0e5;
+                        border-color: #d3d9df;
+                    }
+
+                    &:focus {
+                        box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+                    }
+                }
+
+                .btn-primary {
+                    color: #fff;
+                    background-color: #007bff;
+                    border-color: #007bff;
+
+                    &:not(:disabled):active {
+                        color: #fff;
+                        background-color: #0062cc;
+                        border-color: #005cbf;
+                    }
+
+                    &:focus {
+                        box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+                    }
+                }
+
                 button {
                     margin-left: 8px;
                     cursor: pointer;
